--- a/api_gateway/package.json
+++ b/api_gateway/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
